css/index.css
body{
    background-color: rgb(138, 179, 210);
    color:rgb(26, 27, 27);
}



h1{
text-align: center;
font-style:roboto;
}
h2,p,ul,li{
    padding-top: 20px;
    padding-right: 30px;
    padding-bottom: 50px;
    padding-left: 80px;
    display: block;
}
.top{
    overflow: hidden;
    background-color: #333;
}
.top a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
  }

  .fa {

    font-size: 30px;
    width: 40px;
    text-align: center;
    text-decoration: none;
    margin: 40px 100px;
  }
.fa-linkedin {
    background: #007bb5;
    color: white;
    font-size: 24px;

}
img{
    width: 100px;
    height: auto;
}
.container{
    display: flex; 
    align-items: center; 
}
.linkedin .github{
    padding: 10px;
    border: 1px solid #ccc;

}
.experience-container {
    display: flex; 
    flex-wrap: wrap; 
    gap: 200px; 
}
.master-experience{
    padding: 40px;
}
.experiences{
    flex: 1 1 calc(25% - 20px); 
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
    padding: 15px;
    border-radius: 5px; 
    background-color: #f9f9f9bd; /
}

@media (max-width: 768px) {
    .experiences {
        flex: 1 1 calc(50% - 20px); /
    }
}

@media (max-width: 480px) {
    .experiences {
        flex: 1 1 100%; 
    }
}

